--- a/server/package.json
+++ b/server/package.json
@@ -20,11 +20,9 @@
     "apollo-server-express": "^2.21.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "eslint-config-prettier": "^8.5.0",
     "express": "^4.17.1",
     "graphql": "^15.3.0",
-    "graphql-subscriptions": "^1.2.0",
-    "lodash": "^4.17.21"
+    "graphql-subscriptions": "^1.2.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "1.21.8",
@@ -40,6 +38,7 @@
     "@typescript-eslint/parser": "^4.33.0",
     "concurrently": "5.3.0",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "16.0.3",
     "eslint-plugin-import": "2.25.4",
     "eslint-plugin-node": "11.1.0",
