--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -9,17 +9,12 @@
     "sourceType": "module"
   },
   "plugins": ["@typescript-eslint"],
-  "extends": [
-    "next/core-web-vitals",
-    "plugin:@typescript-eslint/recommended",
-    "prettier"
-  ],
+  "extends": ["next/core-web-vitals", "plugin:@typescript-eslint/recommended", "prettier"],
   "rules": {
     "indent": ["error", 2],
     "linebreak-style": ["error", "unix"],
     "quotes": ["error", "single"],
     "semi": ["error", "always"],
-    "comma-dangle": ["error", "always-multiline"],
-    "max-len": ["error", { "code": 120 }]
+    "comma-dangle": ["error", "always-multiline"]
   }
 }
