--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -15,8 +15,7 @@
     "linebreak-style": ["error", "unix"],
     "quotes": ["error", "single"],
     "semi": ["error", "always"],
-    "comma-dangle": ["error", "always-multiline"],
-    "max-len": ["error", { "code": 120 }]
+    "comma-dangle": ["error", "always-multiline"]
   },
-  "ignorePatterns": ["src/interfaces/types.d.ts", "./dist"]
+  "ignorePatterns": ["src/interfaces/types.d.ts", "dist"]
 }
