--- a/server/package.json
+++ b/server/package.json
@@ -17,36 +17,35 @@
     "prepare": "npm run generate"
   },
   "dependencies": {
-    "apollo-server-express": "^2.21.0",
+    "apollo-server": "^3.10.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "graphql": "^15.3.0",
-    "graphql-subscriptions": "^1.2.0"
+    "express": "^4.18.1",
+    "graphql": "^16.6.0",
+    "graphql-subscriptions": "^2.0.0"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "1.21.8",
-    "@graphql-codegen/introspection": "1.18.2",
-    "@graphql-codegen/typescript": "^1.23.0",
-    "@graphql-codegen/typescript-resolvers": "^1.20.0",
+    "@graphql-codegen/cli": "2.12.0",
+    "@graphql-codegen/introspection": "2.2.1",
+    "@graphql-codegen/typescript": "^2.7.3",
+    "@graphql-codegen/typescript-resolvers": "^2.7.3",
     "@types/compression": "1.7.2",
     "@types/cors": "2.8.12",
     "@types/express": "4.17.13",
     "@types/graphql": "14.5.0",
-    "@types/node": "14.18.4",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "concurrently": "5.3.0",
-    "eslint": "^7.32.0",
+    "@types/node": "18.7.16",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
+    "concurrently": "7.4.0",
+    "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard": "16.0.3",
-    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-import": "2.26.0",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-promise": "4.3.1",
-    "jsdoc": "3.6.7",
-    "nodemon": "2.0.15",
-    "prettier": "^2.5.1",
-    "ts-node": "9.1.1",
-    "typescript": "4.5.4"
+    "eslint-plugin-promise": "6.0.1",
+    "jsdoc": "3.6.11",
+    "nodemon": "2.0.19",
+    "prettier": "^2.7.1",
+    "ts-node": "10.9.1",
+    "typescript": "4.8.3"
   }
 }
