--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,20 +1,37 @@
 {
+  "root": true,
   "env": {
-    "es2021": true,
-    "browser": true
+    "browser": true,
+    "es2021": true
   },
+  "extends": [
+    "next",
+    "plugin:tailwindcss/recommended",
+    "plugin:react-hooks/recommended",
+    "plugin:jsx-a11y/recommended",
+    "eslint:recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": 2021,
+    "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint"],
-  "extends": ["next/core-web-vitals", "plugin:@typescript-eslint/recommended", "prettier"],
+  "plugins": [
+    "tailwindcss",
+    "@typescript-eslint",
+    "react",
+    "jsx-a11y",
+    "react-hooks",
+    "prettier"
+  ],
   "rules": {
     "indent": ["error", 2],
     "linebreak-style": ["error", "unix"],
     "quotes": ["error", "single"],
     "semi": ["error", "always"],
-    "comma-dangle": ["error", "always-multiline"]
+    "react/react-in-jsx-scope": "off",
+    "react/prop-types": "off"
   }
 }
