--- a/client/package.json
+++ b/client/package.json
@@ -7,29 +7,45 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix"
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix ."
   },
+  "files": [
+    ".eslintrc.js",
+    ".eslintignore"
+  ],
   "dependencies": {
+    "@tanstack/react-query": "^4.3.4",
+    "graphql-request": "^5.0.0",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "zod": "^3.19.0"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^4.3.4",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
-    "@typescript-eslint/eslint-plugin": "^5.33.0",
-    "@typescript-eslint/parser": "^5.33.0",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
     "autoprefixer": "^10.4.8",
-    "eslint": "8.23.0",
-    "eslint-config-next": "12.3.0",
+    "eslint": "^8.23.0",
+    "eslint-config-next": "^12.3.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-graphql": "^4.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.0.1",
+    "eslint-plugin-react": "^7.31.8",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-tailwindcss": "^3.6.1",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.1.8",
-    "typescript": "4.7.4"
+    "typescript": "^4.7.4"
   },
   "ct3aMetadata": {
     "initVersion": "5.10.3"
