--- a/client/package.json
+++ b/client/package.json
@@ -10,26 +10,29 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix ."
   },
-  "files": [
-    ".eslintrc.js",
-    ".eslintignore"
-  ],
   "dependencies": {
     "@tanstack/react-query": "^4.3.4",
     "graphql-request": "^5.0.0",
     "next": "12.3.0",
     "react": "18.2.0",
+    "react-aria": "^3.19.0",
     "react-dom": "18.2.0",
-    "zod": "^3.19.0"
+    "react-stately": "^3.17.0",
+    "rss-to-json": "^2.1.0",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.7",
     "@tanstack/react-query-devtools": "^4.3.4",
-    "@types/node": "18.0.0",
-    "@types/react": "18.0.14",
-    "@types/react-dom": "18.0.5",
+    "@types/node": "18.7.16",
+    "@types/react": "18.0.19",
+    "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
-    "autoprefixer": "^10.4.8",
+    "autoprefixer": "^10.4.9",
     "eslint": "^8.23.0",
     "eslint-config-next": "^12.3.0",
     "eslint-config-prettier": "^8.5.0",
@@ -41,11 +44,13 @@
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-tailwindcss": "^3.6.1",
+    "focus-visible": "^5.2.0",
     "postcss": "^8.4.16",
+    "postcss-focus-visible": "^7.1.0",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.1.8",
-    "typescript": "^4.7.4"
+    "typescript": "^4.8.3"
   },
   "ct3aMetadata": {
     "initVersion": "5.10.3"
